# foundry-local-voice2action

./: .gitignore  LICENSE  README.md  app-framework.py  app.py  flake.nix  generate-audio-samples.py  pyproject.toml  sample-agent-framework.py  sample-transcribe.py
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
specs/001-create-task-webhook/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-create-task-webhook/checklists/: requirements.md
specs/001-create-task-webhook/contracts/: README.md  create-todo-webhook.schema.json
specs/001-intent-extraction/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-intent-extraction/checklists/: requirements.md
specs/001-intent-extraction/contracts/: README.md
specs/001-timestamp-processed-audio/: plan.md  spec.md  tasks.md
specs/001-timestamp-processed-audio/checklists/: requirements.md
specs/001-voice-inbox-scan/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-voice-inbox-scan/checklists/: requirements.md
tests/: conftest.py  test_config.py  test_directories.py  test_intent_extraction.py  test_intent_helpers.py  test_intent_llm.py  test_logging.py  test_processing.py  test_scanning.py  test_transcription.py  test_webhook.py
tests/fixtures/: intent_transcripts.json
tests/helpers/: webhook_server.py
