[project]
name = "foundry-local-voice2action"
version = "0.1.0"
description = "Voice to Action demo using Microsoft Foundry Local and Microsoft Agent Framework"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agent-framework",
    "gtts",
    "foundry-local-sdk",
    "openai-whisper",
    "openai",
    "pytest",
]

[tool.pytest.ini_options]
markers = [
    "llm: tests that invoke the real LLM model",
]
